# UnifiedFloppyTool

./: CHANGELOG.md  CMakeLists.txt  RELEASE_NOTES.md  UnifiedFloppyTool.pro
.claude/: CLAUDE.md
.claude/agents/: conformance-test-writer.md  dto-migrator.md  provider-migrator.md  type-system-architect.md  wiring-codegen-author.md
audit/: ARCH-7_VID_PID.md  DIFFERENTIAL_REPORT.md  MASTER_REPORT.md  rc1_field_notes.md
audit/greaseweazle/: REPORT.md
audit/scp/: evidence.json  extract_ref.py  test_scp_vectors.c
docs/: KNOWN_ISSUES.md  REFACTOR_BRIEF.md  REFACTOR_TASKS.md  TESTER_STRATEGY.md
docs/proposals/: P1_23_PROVIDER_ROUTING.md
forms/: tab_hardware.actions.yaml
include/uft/: gw_protocol.h  uft_version.h
include/uft/flux/: uft_flux_decoder.h
include/uft/hal/: concepts.h  mixins.h  outcomes.h  ufi.h  uft_greaseweazle_full.h
packaging/flatpak/: io.github.Axel051171.UnifiedFloppyTool.metainfo.xml
releases/v4.1.4/: P2.4_CHECKLIST.md
releases/v4.1.4-rc1/: hil_report.md
scripts/git-hooks/: pre-commit
src/: fluxwritejob.cpp  fluxwritejob.h  hardwaretab.cpp  hardwaretab.h  mainwindow.cpp  workflowtab.cpp  workflowtab.h
src/core/: uft_core_stubs.c
src/flux/: uft_flux_decoder.c
src/hal/: ufi.c  ufi_backend.c  ufi_linux.c  uft_applesauce.c  uft_greaseweazle_full.c  uft_xum1541.c
src/hardware_providers/: adfcopyhardwareprovider.cpp  applesaucehardwareprovider.cpp  fc5025_provider_v2.cpp  fc5025hardwareprovider.cpp  fluxengine_provider_v2.cpp  fluxengine_provider_v2.h  fluxenginehardwareprovider.cpp  greaseweazle_provider_v2.h  greaseweazlehardwareprovider.cpp  hardwaremanager.cpp  hardwaremanager.h  hardwareprovider.h  kryoflux_provider_v2.cpp  kryofluxhardwareprovider.cpp  scphardwareprovider.cpp  unified_hal_bridge.cpp  usbfloppy_provider_v2.cpp  usbfloppy_provider_v2.h  usbfloppyhardwareprovider.cpp  xum1541hardwareprovider.cpp
tests/: CMakeLists.txt  HARDWARE_TRUTH_TESTS.md  mock_provider_v2.cpp  mock_provider_v2.h  test_applesauce_provider_v2.cpp  test_fluxengine_provider_v2.cpp  test_hal_conformance.cpp  test_hal_foundation.cpp  test_kryoflux_provider_v2.cpp  test_mock_provider_v2.cpp  test_usbfloppy_provider_v2.cpp
tests/conformance/: divergence_registry.yaml  test_harness.py  test_smoke.py
tests/differential/: .gitignore  conftest.py  gen_corpus.py  test_gw_parity.py  uft_flux_decode.c
tests/differential/corpus/: MANIFEST.sha256
tests/differential/corpus/sources/: c64_gcr.d64
tests/emulators/scp/: DIVERGENCES.md  README.md  coverage_matrix.md  firmware_state_machine.c  firmware_state_machine.h  test_scp_emulator.c
tests/external_audits/fluxengine/: REPORT.md  check_profile_coverage.py  diff_uft_fe.py  extract_fe_contract.py  extract_uft_calls.py  mock_fluxengine.py  test_output_parser.py
tests/external_audits/gw/: REPORT.md  compare.py  extract_gw.py  extract_uft.py  flux_reference.py  test_encode_match.c
tests/flux_gen/scp/: flux_gen.c  flux_gen.h
tests/flux_gen/scp/defects/: crc_errors.c  weak_bits.c
tests/flux_gen/scp/defects/copy_protection/: vmax.c
tests/hil/: README.md  golden_reference.yaml  run_hil.py  test_hil_scaffold.py
tests/unit/: test_transitions_ns_contract.c  transitions_ns_ffi.cpp
tests/v4.1.5-hardening/: PHASE2_REPORT.md
tools/: wiring_codegen.py
tools/uft_diff_test/: README.md  __init__.py  registry.py  runner.py
tools/wiring_codegen_tests/: run_tests.py
